--- a/core/res/drawable/selectable_background_transdroid2.xml
+++ b/core/res/drawable/selectable_background_transdroid2.xml
@@ -20,6 +20,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android"
         android:exitFadeDuration="@android:integer/config_mediumAnimTime" >
     <item android:state_pressed="false" android:state_focused="true" android:drawable="@drawable/list_focused_transdroid2" />
+    <item android:state_pressed="false" android:state_checked="true" android:drawable="@drawable/list_focused_transdroid2" />
     <item android:state_pressed="true" android:drawable="@drawable/pressed_background_transdroid2" />
     <item android:drawable="@android:color/transparent" />
 </selector>
