--- a/core/res/layout-w900dp/activity_torrents.xml
+++ b/core/res/layout-w900dp/activity_torrents.xml
@@ -14,7 +14,7 @@
 		android:layout_height="match_parent"
 		android:layout_weight="1"
 		android:choiceMode="singleChoice"
-		android:listSelector="@drawable/selectable_background_transdroid" />
+		android:listSelector="?attr/selectable_background_transdroid" />
 	
 	<fragment
 		android:id="@+id/torrent_list"
