--- a/core/res/layout/list_item_simple.xml
+++ b/core/res/layout/list_item_simple.xml
@@ -11,7 +11,7 @@
 		android:id="@+id/item_text"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:textSize="15sp"
+		android:textSize="@dimen/text_default"
 		android:textIsSelectable="false"
 		android:autoLink="web" />
 
