--- a/core/res/layout/list_item_torrentfile.xml
+++ b/core/res/layout/list_item_torrentfile.xml
@@ -21,7 +21,7 @@
 		android:layout_alignParentTop="true"
 		android:layout_toRightOf="@+id/file_checkbox"
 		android:textColor="?attr/text_bright"
-		android:textSize="15sp"
+		android:textSize="@dimen/text_enlarged"
 		android:textIsSelectable="false"
 		android:focusable="false" />
 		
@@ -33,7 +33,7 @@
 		android:layout_alignParentRight="true"
 		android:layout_marginLeft="@dimen/margin_half"
 		android:layout_marginTop="4dip"
-		android:textSize="12sp"
+		android:textSize="@dimen/text_small"
 		android:textIsSelectable="false"
 		android:focusable="false" />
 
@@ -45,7 +45,7 @@
 		android:layout_alignBottom="@+id/progress_text"
 		android:layout_toRightOf="@+id/priority_image"
 		android:textIsSelectable="false"
-		android:textSize="12sp"
+		android:textSize="@dimen/text_small"
 		android:focusable="false" />
 
 	<ImageView
