--- a/core/res/values/dimens.xml
+++ b/core/res/values/dimens.xml
@@ -1,7 +1,21 @@
 <resources>
 
+	<!-- Margins -->
 	<dimen name="margin_default">16dp</dimen>
 	<dimen name="margin_half">8dp</dimen>
 	<dimen name="margin_torrentlistleft">16dp</dimen>
 
+	<!-- Text sizes -->
+	<dimen name="text_small">12sp</dimen>
+	<dimen name="text_default">15sp</dimen>
+	<dimen name="text_enlarged">15sp</dimen>
+	<dimen name="text_enlargednumbers">22sp</dimen>
+	<dimen name="text_hugenumbers">33sp</dimen>
+	<dimen name="text_label">12sp</dimen>
+	
+	<!-- UI elements -->
+	<dimen name="ui_navigation_filter">17sp</dimen>
+	<dimen name="ui_navigation_server">14sp</dimen>
+	<dimen name="ui_details_seperator">110dp</dimen>
+	
 </resources>
