--- a/core/res/values/styles.xml
+++ b/core/res/values/styles.xml
@@ -59,11 +59,11 @@
 	</style>
 
 	<style name="DefaultTextView" parent="android:Widget.Holo.Light.TextView">
-		<item name="android:textSize">15sp</item>
+		<item name="android:textSize">@dimen/text_default</item>
 	</style>
 
 	<style name="LabelTextView" parent="android:Widget.Holo.Light.TextView">
-		<item name="android:textSize">12sp</item>
+		<item name="android:textSize">@dimen/text_label</item>
 		<item name="android:background">#333</item>
 		<item name="android:textColor">#fff</item>
 		<item name="android:paddingLeft">4dip</item>
