--- a/core/res/menu/fragment_details_file.xml
+++ b/core/res/menu/fragment_details_file.xml
@@ -2,18 +2,22 @@
 
 	<item
 		android:id="@+id/action_priority_off"
+		android:icon="?attr/ic_action_priority_off"
 		android:showAsAction="ifRoom"
 		android:title="@string/action_priority_off" />
 	<item
 		android:id="@+id/action_priority_low"
+		android:icon="?attr/ic_action_priority_low"
 		android:showAsAction="ifRoom"
 		android:title="@string/action_priority_low" />
 	<item
 		android:id="@+id/action_priority_normal"
+		android:icon="?attr/ic_action_priority_normal"
 		android:showAsAction="ifRoom"
 		android:title="@string/action_priority_normal" />
 	<item
 		android:id="@+id/action_priority_high"
+		android:icon="?attr/ic_action_priority_high"
 		android:showAsAction="ifRoom"
 		android:title="@string/action_priority_high" />
 	<item
