--- a/core/res/values/attrs.xml
+++ b/core/res/values/attrs.xml
@@ -10,6 +10,10 @@
 	<attr name="ic_action_labels" format="reference"/>
 	<attr name="ic_action_new" format="reference"/>
 	<attr name="ic_action_pause" format="reference"/>
+	<attr name="ic_action_priority_off" format="reference"/>
+	<attr name="ic_action_priority_low" format="reference"/>
+	<attr name="ic_action_priority_normal" format="reference"/>
+	<attr name="ic_action_priority_high" format="reference"/>
 	<attr name="ic_action_refresh" format="reference"/>
 	<attr name="ic_action_remove" format="reference"/>
 	<attr name="ic_action_resume" format="reference"/>
@@ -18,6 +22,7 @@
 	<attr name="ic_action_sort_by_size" format="reference"/>
 	<attr name="ic_action_start" format="reference"/>
 	<attr name="ic_action_stop" format="reference"/>
+	<attr name="ic_action_trackers" format="reference"/>
 	<attr name="ic_action_website" format="reference"/>
 	<attr name="loading_progress" format="reference"/>
 	<attr name="selectable_background_transdroid" format="reference"/>
