Added server status (counts and speeds) in the action bar.

--- a/core/res/values-sw600dp/dimens.xml
+++ b/core/res/values-sw600dp/dimens.xml
@@ -17,5 +17,11 @@
 	<dimen name="ui_navigation_filter">18sp</dimen>
 	<dimen name="ui_navigation_server">15sp</dimen>
 	<dimen name="ui_details_seperator">125dp</dimen>
+	<dimen name="ui_serverstatus_margin">2dp</dimen>
+	<dimen name="ui_serverstatus_signmargin">5dp</dimen>
+	<dimen name="ui_serverstatus_bignumber">25sp</dimen>
+	<dimen name="ui_serverstatus_sign">17sp</dimen>
+	<dimen name="ui_serverstatus_smallnumber">14sp</dimen>
+	<dimen name="ui_serverstatus_width">63dp</dimen>
 	
 </resources>
