--- a/core/res/layout/list_item_simple.xml
+++ b/core/res/layout/list_item_simple.xml
@@ -2,10 +2,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:paddingBottom="@dimen/margin_half"
+	android:paddingBottom="4dip"
 	android:paddingLeft="@dimen/margin_default"
 	android:paddingRight="@dimen/margin_default"
-	android:paddingTop="@dimen/margin_half" >
+	android:paddingTop="4dip" >
 
 	<TextView
 		android:id="@+id/item_text"
