--- a/core/res/values/styles_transdroid_light.xml
+++ b/core/res/values/styles_transdroid_light.xml
@@ -19,60 +19,48 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <style name="Theme.Transdroid2" parent="@style/Theme.Sherlock.Light">
+    <style name="Theme.Transdroid.Light" parent="@style/Theme.Sherlock.Light">
         <item name="actionBarItemBackground">@drawable/selectable_background_transdroid2</item>
-        <item name="popupMenuStyle">@style/PopupMenu.Transdroid2</item>
-        <item name="dropDownListViewStyle">@style/DropDownListView.Transdroid2</item>
-        <item name="actionBarTabStyle">@style/ActionBarTabStyle.Transdroid2</item>
-        <item name="actionDropDownStyle">@style/DropDownNav.Transdroid2</item>
-        <item name="actionBarStyle">@style/ActionBar.Solid.Transdroid2</item>
+        <item name="popupMenuStyle">@style/PopupMenu.Transdroid.Light</item>
+        <item name="dropDownListViewStyle">@style/DropDownListView.Transdroid.Light</item>
+        <item name="actionBarTabStyle">@style/ActionBarTabStyle.Transdroid.Light</item>
+        <item name="actionDropDownStyle">@style/DropDownNav.Transdroid.Light</item>
+        <item name="actionBarStyle">@style/ActionBar.Solid.Transdroid.Light</item>
         <item name="actionModeBackground">@drawable/cab_background_top_transdroid2</item>
         <item name="actionModeSplitBackground">@drawable/cab_background_bottom_transdroid2</item>
-        <item name="actionModeCloseButtonStyle">@style/ActionButton.CloseMode.Transdroid2</item>
+        <item name="actionModeCloseButtonStyle">@style/ActionButton.CloseMode.Transdroid.Light</item>
     </style>
 
-    <style name="ActionBar.Solid.Transdroid2" parent="@style/Widget.Sherlock.Light.ActionBar.Solid">
+    <style name="ActionBar.Solid.Transdroid.Light" parent="@style/Widget.Sherlock.Light.ActionBar.Solid">
         <item name="background">@drawable/ab_solid_transdroid2</item>
         <item name="backgroundStacked">@drawable/ab_stacked_solid_transdroid2</item>
         <item name="backgroundSplit">@drawable/ab_bottom_solid_transdroid2</item>
-        <item name="progressBarStyle">@style/ProgressBar.Transdroid2</item>
     </style>
 
-    <style name="ActionBar.Transparent.Transdroid2" parent="@style/Widget.Sherlock.Light.ActionBar">
+    <style name="ActionBar.Transparent.Transdroid.Light" parent="@style/Widget.Sherlock.Light.ActionBar">
         <item name="background">@drawable/ab_transparent_transdroid2</item>
-        <item name="progressBarStyle">@style/ProgressBar.Transdroid2</item>
     </style>
 	
-    <style name="PopupMenu.Transdroid2" parent="@style/Widget.Sherlock.Light.ListPopupWindow">	
+    <style name="PopupMenu.Transdroid.Light" parent="@style/Widget.Sherlock.Light.ListPopupWindow">	
         <item name="android:popupBackground">@drawable/menu_dropdown_panel_transdroid2</item>	
     </style>
 	
-    <style name="DropDownListView.Transdroid2" parent="@style/Widget.Sherlock.Light.ListView.DropDown">
+    <style name="DropDownListView.Transdroid.Light" parent="@style/Widget.Sherlock.Light.ListView.DropDown">
         <item name="android:listSelector">@drawable/selectable_background_transdroid2</item>
     </style>
 
-    <style name="ActionBarTabStyle.Transdroid2" parent="@style/Widget.Sherlock.Light.ActionBar.TabView">
+    <style name="ActionBarTabStyle.Transdroid.Light" parent="@style/Widget.Sherlock.Light.ActionBar.TabView">
         <item name="android:background">@drawable/tab_indicator_ab_transdroid2</item>
     </style>
 	
-    <style name="DropDownNav.Transdroid2" parent="@style/Widget.Sherlock.Light.Spinner.DropDown.ActionBar">
+    <style name="DropDownNav.Transdroid.Light" parent="@style/Widget.Sherlock.Light.Spinner.DropDown.ActionBar">
         <item name="android:background">@drawable/spinner_background_ab_transdroid2</item>
         <item name="android:popupBackground">@drawable/menu_dropdown_panel_transdroid2</item>
         <item name="android:dropDownSelector">@drawable/selectable_background_transdroid2</item>
     </style>
     
-	<style name="ProgressBar.Transdroid2" parent="@style/Widget.Sherlock.Light.ProgressBar.Horizontal">
-        <item name="android:progressDrawable">@drawable/progress_horizontal_transdroid2</item>
-    </style>
-    
-    <style name="ActionButton.CloseMode.Transdroid2" parent="@style/Widget.Sherlock.Light.ActionButton.CloseMode">
+    <style name="ActionButton.CloseMode.Transdroid.Light" parent="@style/Widget.Sherlock.Light.ActionButton.CloseMode">
         <item name="android:background">@drawable/btn_cab_done_transdroid2</item>
     </style>
     
-    <!-- this style is only referenced in a Light.DarkActionBar based theme -->
-    <style name="Theme.Transdroid2.Widget" parent="@style/Theme.Sherlock">
-        <item name="popupMenuStyle">@style/PopupMenu.Transdroid2</item>
-        <item name="dropDownListViewStyle">@style/DropDownListView.Transdroid2</item>
-    </style>
-
 </resources>
