--- a/core/res/layout/list_item_simple.xml
+++ b/core/res/layout/list_item_simple.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
+	android:layout_width="wrap_content"
+	android:layout_height="wrap_content"
 	android:paddingBottom="4dip"
 	android:paddingLeft="@dimen/margin_default"
 	android:paddingRight="@dimen/margin_default"
@@ -9,7 +9,7 @@
 
 	<TextView
 		android:id="@+id/item_text"
-		android:layout_width="match_parent"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:textSize="@dimen/text_default"
 		android:textIsSelectable="false"
