--- a/core/res/layout/fragment_rssfeeds.xml
+++ b/core/res/layout/fragment_rssfeeds.xml
@@ -21,7 +21,7 @@
 		android:gravity="center"
 		android:maxWidth="400dip"
 		android:padding="@dimen/margin_default"
-		android:text="@string/navigation_nosettings"
+		android:text="@string/rss_nosettings"
 		android:textIsSelectable="false"
 		android:visibility="gone" />
 
